--- a/index.html
+++ b/index.html
@@ -1,2 +1,141 @@
+<html>
+<head>
+   
 
+    <title></title>
+    <!--My CSS page-->
+    <link href="HomePage.css" rel="stylesheet" />
+
+    <!--The javascript page link is at the bottom-->
+  <style>
+  
+* { /*picture layout*/
+    box-sizing: border-box;
+}
+
+.column { /*Picture layout*/
+    float: left;
+    width: 24%;
+    padding: 5px;
+    height: 450px;
+    margin: 5px;
+}
+/*Nav style*/
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    position: sticky;
+    top: 0;
+}
+
+li {
+    float: left;
+}
+
+    li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
+
+        li a:hover:not(.active) {
+            background-color: #111;
+        }
+
+.active {
+    background-color: Red;
+}
+
+/* heading*/
+.container {
+    position: relative;
+    text-align: center;
+    color: red;
+    font-size: 70px;
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: Impact, Charcoal, sans-serif;
+}
+
+  
+  </style>
+  
+  
+</head>
+<body bgcolor="black">
+    <!--This is my Nav tab-->
+    <header>
+        <nav>
+            <ul>
+                <li><a class="active" href="Home.html">Home</a> </li>
+                <li><a href="Gallery.html">Fruit Price</a></li>
+                <li><a href="Contact Page.html">Veg Price</a> </li>
+                <li><a href="Rating.html">Indian Veg Price</a> </li>
+                <li><a href="Rating.html">Contact Us</a> </li>
+
+            </ul>
+
+        </nav>
+    </header>
+    <!--Image slideshow-->
+    <section>
+        <div class="container">
+            <!--<img class="mySlides" src="pictures/pic1.jpg"
+                 style="width:100%" height="700">-->
+            <img class="mySlides" src="pictures/pic2.jpg"
+                 style="width:100%" height="700">
+            <!--<img class="mySlides" src="pictures/pic3.jpg"
+                 style="width:100%" height="700">-->
+            <div class="centered">Preeti's Fruit and Veg</div>
+        </div>
+    </section>
+
+    <!--This is my comics images-->
+
+    <img class="column" src="comics pic/100 bullets.jpg" />
+    <img class="column" src="comics pic/AT.jpg" />
+    <img class="column" src="comics pic/Authority.jpg" />
+    <img class="column" src="comics pic/Batman.jpg" />
+    <img class="column" src="comics pic/CaptainAmericavo.jpg" />
+    <img class="column" src="comics pic/daredevil.jpg" />
+    <img class="column" src="comics pic/dddd.jpg" />
+    <img class="column" src="comics pic/fables.jpg" />
+    <img class="column" src="comics pic/green lantern.jpg" />
+    <img class="column" src="comics pic/hellboy.jpg" />
+    <img class="column" src="comics pic/kick-ass-issue-3-jrjr.jpg" />
+    <img class="column" src="comics pic/ms marvel.jpg" />
+    <img class="column" src="comics pic/planetary.jpg" />
+    <img class="column" src="comics pic/Preacher.jpg" />
+    <img class="column" src="comics pic/promethea.jpg" />
+    <img class="column" src="comics pic/Runaways_1.jpg" />
+    <img class="column" src="comics pic/saga.jpg" />
+    <img class="column" src="comics pic/Spiderman.jpg" />
+    <img class="column" src="comics pic/starman.jpg" />
+    <img class="column" src="comics pic/Strangers in paradise.jpg" />
+    <img class="column" src="comics pic/superman.jpg" />
+    <img class="column" src="comics pic/the punisher.jpg" />
+    <img class="column" src="comics pic/the walking dead.jpg" />
+    <img class="column" src="comics pic/wanted.jpg" />
+    <img class="column" src="comics pic/x-men.jpg" />
+
+
+    <!--This is my Javascript file-->
+
+
+   
+
+
+
+</body>
+</html>
 
