--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ li {
         <div class="container">
             <!--<img class="mySlides" src="pictures/pic1.jpg"
                  style="width:100%" height="700">-->
-            <img class="mySlides" src="pictures/pic2.jpg"
+            <img class="mySlides" src="pic2.jpg"
                  style="width:100%" height="700">
             <!--<img class="mySlides" src="pictures/pic3.jpg"
                  style="width:100%" height="700">-->
