--- a/index.html
+++ b/index.html
@@ -77,11 +77,12 @@ li {
     <header>
         <nav>
             <ul>
-                <li><a class="active" href="Home.html">Home</a> </li>
-                <li><a href="Gallery.html">Fruit Price</a></li>
+                <li><a class="active" href="HomePage.html">Home</a> </li>
+                <li><a href="FruitPrice.html">Fruit Price</a></li>
                 <li><a href="Contact Page.html">Veg Price</a> </li>
                 <li><a href="Rating.html">Indian Veg Price</a> </li>
                 <li><a href="Rating.html">Contact Us</a> </li>
+
 
             </ul>
 
