--- a/FruitPrice.html
+++ b/FruitPrice.html
@@ -1,1 +1,31 @@
+<html>
+<head>
+    
+    <title></title>
+    <!--My CSS page-->
+    
 
+
+</head>
+<body bgcolor="black">
+    <!--This is my Nav tab-->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="HomePage.html">Home</a> </li>
+                <li><a class="active" href="FruitPrice.html">Fruit Price</a></li>
+                <li><a href="Contact Page.html">Veg Price</a> </li>
+                <li><a href="Rating.html">Indian Veg Price</a> </li>
+                <li><a href="Rating.html">Contact Us</a> </li>
+
+            </ul>
+
+        </nav>
+    </header>
+
+
+
+
+
+</body>
+</html>
