--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ li {
     <header>
         <nav>
             <ul>
-                <li><a class="active" href="HomePage.html">Home</a> </li>
+                <li><a class="active" href="index.html">Home</a> </li>
                 <li><a href="FruitPrice.html">Fruit Price</a></li>
                 <li><a href="Contact Page.html">Veg Price</a> </li>
                 <li><a href="Rating.html">Indian Veg Price</a> </li>
