--- a/FruitPrice.html
+++ b/FruitPrice.html
@@ -62,7 +62,7 @@
             <ul>
                 <li><a href="HomePage.html">Home</a> </li>
                 <li><a class="active" href="FruitPrice.html">Fruit Price</a></li>
-                <li><a href="Contact Page.html">Veg Price</a> </li>
+                <li><a href="VegPrice.html">Veg Price</a> </li>
                 <li><a href="Rating.html">Indian Veg Price</a> </li>
                 <li><a href="Rating.html">Contact Us</a> </li>
 
