--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ li {
             <ul>
                 <li><a class="active" href="index.html">Home</a> </li>
                 <li><a href="FruitPrice.html">Fruit Price</a></li>
-                <li><a href="Contact Page.html">Veg Price</a> </li>
+                <li><a href="VegPrice.html">Veg Price</a> </li>
                 <li><a href="Rating.html">Indian Veg Price</a> </li>
                 <li><a href="Rating.html">Contact Us</a> </li>
 
