--- a/VegPrice.html
+++ b/VegPrice.html
@@ -59,7 +59,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="HomePage.html">Home</a> </li>
+                <li><a href="index.html">Home</a> </li>
                 <li><a href="FruitPrice.html">Fruit Price</a></li>
                 <li><a class="active" href="VegPrice.html">Veg Price</a> </li>
                 <li><a href="Rating.html">Indian Veg Price</a> </li>
