--- a/VegPrice.html
+++ b/VegPrice.html
@@ -72,7 +72,7 @@
     <section>
 
         <div>
-            <img src="pictures/pic5.jpg"
+            <img src="Fruit and veg/pic5.jpg"
                  style="width:100%" height="350">
 
         </div>
@@ -84,21 +84,21 @@
 
     <div class="row">
         <div class="column">
-            <img src="pictures/pic7.png" alt="Snow" style="width:80%">
+            <img src="Fruit and veg/pic7.png" alt="Snow" style="width:80%">
             <p>Hello : R20.00 each </p>
         </div>
         <div class="column">
-            <img src="pictures/pic8.jpg" alt="Forest" style="width:80%">
+            <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
             <p>number1 </p>
         </div>
         <div class="column">
             <img src="pictures/pic6.jpg" alt="Mountains" style="width:80%">
         </div>
         <div class="column">
-            <img src="pictures/pic4.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/pic4.jpg" alt="Mountains" style="width:80%">
         </div>
         <div class="column">
-            <img src="pictures/pic1.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/pic1.jpg" alt="Mountains" style="width:80%">
         </div>
 
     </div>
@@ -106,21 +106,21 @@
 
     <div class="row">
         <div class="column">
-            <img src="pictures/pic7.png" alt="Snow" style="width:80%">
+            <img src="Fruit and veg/pic7.png" alt="Snow" style="width:80%">
             <p>Hello </p>
         </div>
         <div class="column">
-            <img src="pictures/pic8.jpg" alt="Forest" style="width:80%">
+            <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
             <p>number1 </p>
         </div>
         <div class="column">
-            <img src="pictures/pic6.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/pic6.jpg" alt="Mountains" style="width:80%">
         </div>
         <div class="column">
-            <img src="pictures/pic4.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/pic4.jpg" alt="Mountains" style="width:80%">
         </div>
         <div class="column">
-            <img src="pictures/pic1.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/pic1.jpg" alt="Mountains" style="width:80%">
         </div>
 
     </div>
