--- a/VegPrice.html
+++ b/VegPrice.html
@@ -92,7 +92,7 @@
             <p>number1 </p>
         </div>
         <div class="column">
-            <img src="pictures/pic6.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/pic6.jpg" alt="Mountains" style="width:80%">
         </div>
         <div class="column">
             <img src="Fruit and veg/pic4.jpg" alt="Mountains" style="width:80%">
