--- a/FruitPrice.html
+++ b/FruitPrice.html
@@ -63,7 +63,7 @@
                 <li><a href="index.html">Home</a> </li>
                 <li><a class="active" href="FruitPrice.html">Fruit Price</a></li>
                 <li><a href="VegPrice.html">Veg Price</a> </li>
-                <li><a href="Rating.html">Indian Veg Price</a> </li>
+                <li><a href="IndianVegPrice.html">Indian Veg Price</a> </li>
                 <li><a href="Rating.html">Contact Us</a> </li>
 
             </ul>
