--- a/VegPrice.html
+++ b/VegPrice.html
@@ -62,7 +62,7 @@
                 <li><a href="index.html">Home</a> </li>
                 <li><a href="FruitPrice.html">Fruit Price</a></li>
                 <li><a class="active" href="VegPrice.html">Veg Price</a> </li>
-                <li><a href="Rating.html">Indian Veg Price</a> </li>
+                <li><a href="IndianVegPrice.html">Indian Veg Price</a> </li>
                 <li><a href="Rating.html">Contact Us</a> </li>
 
             </ul>
