--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ li {
                 <li><a class="active" href="index.html">Home</a> </li>
                 <li><a href="FruitPrice.html">Fruit Price</a></li>
                 <li><a href="VegPrice.html">Veg Price</a> </li>
-                <li><a href="Rating.html">Indian Veg Price</a> </li>
+                <li><a href="IndianVegPrice.html">Indian Veg Price</a> </li>
                 <li><a href="Rating.html">Contact Us</a> </li>
 
 
