fruit price done

--- a/FruitPrice.html
+++ b/FruitPrice.html
@@ -83,51 +83,333 @@
   <br />
   <br />
 
-    <!--This is my comics images-->
+   <!--This is my Fruit images with price-->
+    <!--first row-->
 
     <div class="row">
         <div class="column">
             <img src="Fruit and veg/pic7.png" alt="Snow" style="width:80%">
-            <p>Hello : R20.00 each </p>
+            <p>
+                Apples Top Red Econo 1.5kg
+                <br />
+                = R50.00
+
+            </p>
         </div>
         <div class="column">
             <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
-            <p>number1 </p>
+            <p>
+                Apples Golden Econo 1.5kg
+                <br />
+                = R40.00
+
+            </p>
         </div>
         <div class="column">
             <img src="Fruit and veg/pic6.jpg" alt="Mountains" style="width:80%">
+            <p>
+                Apples Granny Smith Econo 1.5kg
+                <br />
+                = R20.00
+
+            </p>
         </div>
         <div class="column">
             <img src="Fruit and veg/pic4.jpg" alt="Mountains" style="width:80%">
+            <p>
+                Apple fuji 1.5kg
+                <br />
+                = R50.00
+
+            </p>
         </div>
         <div class="column">
             <img src="Fruit and veg/pic1.jpg" alt="Mountains" style="width:80%">
+            <p>
+                Avo Fuerte Large
+                <br />
+                = R11.00
+
+            </p>
         </div>
 
     </div>
+
+    <!--second row-->
+
+    <div class="row">
+        <div class="column">
+            <img src="Fruit and veg/pic7.png" alt="Snow" style="width:80%">
+            <p>
+                Banana Cell 700g Premium
+                <br />
+                = R15.00
+
+            </p>
+        </div>
+        <div class="column">
+            <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
+            <p>
+                Banana organic economy umbaba 1.3kg
+                <br />
+                = R25.00
+            </p>
+        </div>
+        <div class="column">
+            <img src="Fruit and veg/pic6.jpg" alt="Mountains" style="width:80%">
+            <p>
+                Blueberries pnut
+                <br />
+                = R35.00
+
+            </p>
+        </div>
+        <div class="column">
+            <img src="Fruit and veg/pic4.jpg" alt="Mountains" style="width:80%">
+            <p>
+                Clementine small box
+                <br />
+                = R30.00
+            </p>
+        </div>
+        <div class="column">
+            <img src="Fruit and veg/pic1.jpg" alt="Mountains" style="width:80%">
+            <p>
+                Grapefruit ( jackson) 1kg
+                <br />
+                = R20.00
+            </p>
+        </div>
+
+    </div>
+
+    <!--Third row-->
+
+    <div class="row">
+        <div class="column">
+            <img src="Fruit and veg/pic7.png" alt="Snow" style="width:80%">
+            <p>
+                Grapes Tub Red Imported Seedless
+                <br />
+                = R32.00
+
+            </p>
+        </div>
+        <div class="column">
+            <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
+            <p>
+                Guava PP
+                <br />
+                = R20.00
+            </p>
+        </div>
+        <div class="column">
+            <img src="Fruit and veg/pic6.jpg" alt="Mountains" style="width:80%">
+            <p>
+                Guavas tray (pink)
+                <br />
+                = R90.00
+
+            </p>
+        </div>
+        <div class="column">
+            <img src="Fruit and veg/pic4.jpg" alt="Mountains" style="width:80%">
+            <p>
+                White guava mini box
+                <br />
+                = R45.00
+            </p>
+        </div>
+        <div class="column">
+            <img src="Fruit and veg/pic1.jpg" alt="Mountains" style="width:80%">
+            <p>
+                Kiwi pnut
+                <br />
+                = R25.00
+            </p>
+        </div>
+
+    </div>
+
+    <!--Forth row-->
+
+    <div class="row">
+        <div class="column">
+            <img src="Fruit and veg/pic7.png" alt="Snow" style="width:80%">
+            <p>
+                Gold kiwi pnut
+                <br />
+                = R30.00
+
+            </p>
+        </div>
+        <div class="column">
+            <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
+            <p>
+                Kumquats Tubs
+                <br />
+                = R18.00
+            </p>
+        </div>
+        <div class="column">
+            <img src="Fruit and veg/pic6.jpg" alt="Mountains" style="width:80%">
+            <p>
+                Lemons bag 1kg
+                <br />
+                = R14.00
+
+            </p>
+        </div>
+        <div class="column">
+            <img src="Fruit and veg/pic4.jpg" alt="Mountains" style="width:80%">
+            <p>
+                Naartjies 8's PP
+                <br />
+                = R25.00
+            </p>
+        </div>
+        <div class="column">
+            <img src="Fruit and veg/pic1.jpg" alt="Mountains" style="width:80%">
+            <p>
+                Naartjies Mini Box Special
+                <br />
+                = R24.00
+            </p>
+        </div>
+
+    </div>
+
+    <!--fifth row-->
 
 
     <div class="row">
         <div class="column">
             <img src="Fruit and veg/pic7.png" alt="Snow" style="width:80%">
-            <p>Hello </p>
+            <p>
+                Oranges 6kg Bag
+                <br />
+                = R40.00
+
+            </p>
         </div>
         <div class="column">
             <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
-            <p>number1 </p>
+            <p>
+                Red orange 6kg bag
+                <br />
+                = R45.00
+            </p>
         </div>
         <div class="column">
             <img src="Fruit and veg/pic6.jpg" alt="Mountains" style="width:80%">
+            <p>
+                Packham Pears 1.5kg
+                <br />
+                = R24.00
+
+            </p>
         </div>
         <div class="column">
             <img src="Fruit and veg/pic4.jpg" alt="Mountains" style="width:80%">
+            <p>
+                Forelle Pears Econo 1.5kg
+                <br />
+                = R27.00
+            </p>
         </div>
         <div class="column">
             <img src="Fruit and veg/pic1.jpg" alt="Mountains" style="width:80%">
+            <p>
+                Papino pnut
+                <br />
+                = R27.00
+            </p>
         </div>
 
     </div>
 
+    <!--Sixth row-->
+
+
+    <div class="row">
+        <div class="column">
+            <img src="Fruit and veg/pic7.png" alt="Snow" style="width:80%">
+            <p>
+                Pecanut
+                <br />
+                = R85.00 kg
+
+            </p>
+        </div>
+        <div class="column">
+            <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
+            <p>
+                Pineapples large
+                <br />
+                = R12.00 each
+            </p>
+        </div>
+        <div class="column">
+            <img src="Fruit and veg/pic6.jpg" alt="Mountains" style="width:80%">
+            <p>
+                Pomegranate
+                <br />
+                = R15.00 each
+
+            </p>
+        </div>
+        <div class="column">
+            <img src="Fruit and veg/pic4.jpg" alt="Mountains" style="width:80%">
+            <p>
+                Pomelos large
+
+                <br />
+                = R18.00each
+            </p>
+        </div>
+        <div class="column">
+            <img src="Fruit and veg/pic1.jpg" alt="Mountains" style="width:80%">
+            <p>
+                Spanspek
+                <br />
+                = R28.00
+            </p>
+        </div>
+
+    </div>
+
+    <!--seventh row-->
+
+    <div class="row">
+        <div class="column">
+            <img src="Fruit and veg/pic7.png" alt="Snow" style="width:80%">
+            <p>
+                Sweet Melon
+                <br />
+                = R25.00
+
+            </p>
+        </div>
+        <div class="column">
+            <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
+            <p>
+                Strawberry 250g
+                <br />
+                = R35.00
+            </p>
+        </div>
+        <div class="column">
+            <img src="Fruit and veg/pic6.jpg" alt="Mountains" style="width:80%">
+            <p>
+                Strawberry 400g
+                <br />
+                = R55.00
+
+            </p>
+        </div>
+        
+
+    </div>
 
 </body>
 </html>
