--- a/IndianVegPrice.html
+++ b/IndianVegPrice.html
@@ -76,7 +76,7 @@
                 <li><a href="VegPrice.html">Veg Price</a> </li>
                 <li><a class="active" href="IndianVegPrice.html">Indian Veg Price</a> </li>
                 <li><a href="Rating.html">Contact Us</a> </li>
-                <input id="myInput" type="text" placeholder="Search For fruit names...">
+                <input id="myInput" type="text" placeholder="Search For Indian Veg names...">
 
             </ul>
 
