--- a/FruitPrice.html
+++ b/FruitPrice.html
@@ -102,18 +102,18 @@
 
     <div class="row">
         <div class="column">
-            <img src="Fruit and veg/pic7.png" alt="Snow" style="width:80%">
+            <img src="Fruit and veg/apple top red 1.5kg.jpg" alt="Snow" style="width:80%">
             <p>
-                Apples Top Red Econo 1.5kg
+                Apple Top Red Econo 1.5kg
                 <br />
                 = R50.00
 
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
+            <img src="Fruit and veg/apple Golden Econo 1.5kg.jpg" alt="Forest" style="width:80%">
             <p>
-                Apples Golden Econo 1.5kg
+                Apple Golden Econo 1.5kg
                 <br />
                 = R40.00
 
@@ -129,7 +129,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic4.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/apple fuji 1.5kg.jpg" alt="Mountains" style="width:80%">
             <p>
                 Apple fuji 1.5kg
                 <br />
@@ -138,11 +138,11 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic1.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/Avo each.jpg" alt="Mountains" style="width:80%">
             <p>
                 Avo Fuerte Large
                 <br />
-                = R11.00
+                = R11.00 each
 
             </p>
         </div>
@@ -153,7 +153,7 @@
 
     <div class="row">
         <div class="column">
-            <img src="Fruit and veg/pic7.png" alt="Snow" style="width:80%">
+            <img src="Fruit and veg/banana 700g.jpg" alt="Snow" style="width:80%">
             <p>
                 Banana Cell 700g Premium
                 <br />
@@ -162,7 +162,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
+            <img src="Fruit and veg/banana 1.3kg.jpg" alt="Forest" style="width:80%">
             <p>
                 Banana organic economy umbaba 1.3kg
                 <br />
@@ -170,7 +170,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic6.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/blueberry.jpg" alt="Mountains" style="width:80%">
             <p>
                 Blueberries pnut
                 <br />
@@ -201,7 +201,7 @@
 
     <div class="row">
         <div class="column">
-            <img src="Fruit and veg/pic7.png" alt="Snow" style="width:80%">
+            <img src="Fruit and veg/red grapes tub.jpg" alt="Snow" style="width:80%">
             <p>
                 Grapes Tub Red Imported Seedless
                 <br />
@@ -210,7 +210,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
+            <img src="Fruit and veg/guava PP.jpg" alt="Forest" style="width:80%">
             <p>
                 Guava PP
                 <br />
@@ -249,7 +249,7 @@
 
     <div class="row">
         <div class="column">
-            <img src="Fruit and veg/pic7.png" alt="Snow" style="width:80%">
+            <img src="Fruit and veg/golden kiwi.jpg" alt="Snow" style="width:80%">
             <p>
                 Gold kiwi pnut
                 <br />
@@ -275,7 +275,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic4.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/naartjies 8's PP.jpg" alt="Mountains" style="width:80%">
             <p>
                 Naartjies 8's PP
                 <br />
@@ -298,7 +298,7 @@
 
     <div class="row">
         <div class="column">
-            <img src="Fruit and veg/pic7.png" alt="Snow" style="width:80%">
+            <img src="Fruit and veg/orange bag 6kg.jpg" alt="Snow" style="width:80%">
             <p>
                 Oranges 6kg Bag
                 <br />
@@ -324,7 +324,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic4.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/forelle Pears Econo 1.5kg.jpg" alt="Mountains" style="width:80%">
             <p>
                 Forelle Pears Econo 1.5kg
                 <br />
@@ -332,7 +332,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic1.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/papino tray.jpg" alt="Mountains" style="width:80%">
             <p>
                 Papino pnut
                 <br />
@@ -347,7 +347,7 @@
 
     <div class="row">
         <div class="column">
-            <img src="Fruit and veg/pic7.png" alt="Snow" style="width:80%">
+            <img src="Fruit and veg/peakanut 1kg.jpg" alt="Snow" style="width:80%">
             <p>
                 Pecanut
                 <br />
@@ -356,7 +356,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
+            <img src="Fruit and veg/pineapple each.jpg" alt="Forest" style="width:80%">
             <p>
                 Pineapples large
                 <br />
@@ -364,7 +364,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic6.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/pomegranate each.jpg" alt="Mountains" style="width:80%">
             <p>
                 Pomegranate
                 <br />
@@ -413,7 +413,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic6.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/strawberry 450g.jpg" alt="Mountains" style="width:80%">
             <p>
                 Strawberry 400g
                 <br />
