--- a/VegPrice.html
+++ b/VegPrice.html
@@ -99,12 +99,12 @@
     </section>
 <br/>
 <br/>
-    <!--This is my Fruit images with price-->
+<!--This is my veg images with price-->
     <!--first row-->
 
     <div class="row">
         <div class="column">
-            <img src="Fruit and veg/pic7.png" alt="Snow" style="width:80%">
+            <img src="Fruit and veg/beetroot 1kg.jpg" alt="Snow" style="width:80%">
             <p>
                 Beetroot 1kg
                 <br />
@@ -122,7 +122,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic6.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/broccoli.jpg" alt="Mountains" style="width:80%">
             <p>
                 Broccoli PP
                 <br />
@@ -140,7 +140,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic1.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/greenbean 1kg.jpg" alt="Mountains" style="width:80%">
             <p>
                 Green Beans 1kg
                 <br />
@@ -164,7 +164,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
+            <img src="Fruit and veg/baby cabbage.jpg" alt="Forest" style="width:80%">
             <p>
                 Baby cabbage p/p
                 <br />
@@ -191,7 +191,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic1.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/carrot 1kg.jpg" alt="Mountains" style="width:80%">
             <p>
                 Carrots 1kg Rugani Premium
                 <br />
@@ -217,7 +217,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
+            <img src="Fruit and veg/cauliflower.jpg" alt="Forest" style="width:80%">
             <p>
                 Cauliflower PP
                 <br />
@@ -226,7 +226,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic6.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/english cucumber.jpg" alt="Mountains" style="width:80%">
             <p>
                 English Cucumber
                 <br />
@@ -258,54 +258,7 @@
     <!--Forth row-->
 
 
-    <div class="row">
-        <div class="column">
-            <img src="Fruit and veg/pic7.png" alt="Snow" style="width:80%">
-            <p>
-                CauliBrocc PP
-                <br />
-                = R24.00
-
-            </p>
-        </div>
-        <div class="column">
-            <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
-            <p>
-                Cauliflower PP
-                <br />
-                = R20.00
-
-            </p>
-        </div>
-        <div class="column">
-            <img src="Fruit and veg/pic6.jpg" alt="Mountains" style="width:80%">
-            <p>
-                English Cucumber
-                <br />
-                = R14.00
-
-            </p>
-
-        </div>
-        <div class="column">
-            <img src="Fruit and veg/pic4.jpg" alt="Mountains" style="width:80%">
-            <p>
-                Green Chillies
-                <br />
-                = R20/kg
-            </p>
-        </div>
-        <div class="column">
-            <img src="Fruit and veg/pic1.jpg" alt="Mountains" style="width:80%">
-            <p>
-                Red Chillies
-                <br />
-                = R38/kg
-            </p>
-
-        </div>
-
-    </div>
+    
 
     <!--fifth row-->
 
@@ -382,7 +335,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic6.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/mushroom.jpg" alt="Mountains" style="width:80%">
             <p>
                 Mushroom 250g punnet
                 <br />
@@ -400,7 +353,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic1.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/baby marrow.jpg" alt="Mountains" style="width:80%">
             <p>
                 Baby marrow
                 <br />
@@ -434,7 +387,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic6.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/onion 2kg.jpg" alt="Mountains" style="width:80%">
             <p>
                 Onions 2kg
                 <br />
@@ -505,7 +458,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic1.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/potato 2kg.jpg" alt="Mountains" style="width:80%">
             <p>
                 Potato 2kg
                 <br />
@@ -530,7 +483,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
+            <img src="Fruit and veg/sweet potato orange.jpg" alt="Forest" style="width:80%">
             <p>
                 Orange sweet potato 1kg
                 <br />
@@ -557,7 +510,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic1.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/yellow pepper.jpg" alt="Mountains" style="width:80%">
             <p>
                 Yellow Peppers singles
                 <br />
@@ -573,7 +526,7 @@
 
     <div class="row">
         <div class="column">
-            <img src="Fruit and veg/pic7.png" alt="Snow" style="width:80%">
+            <img src="Fruit and veg/red pepper.jpg" alt="Snow" style="width:80%">
             <p>
                 Red Peppers singles
                 <br />
@@ -582,7 +535,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
+            <img src="Fruit and veg/green pepper.jpg" alt="Forest" style="width:80%">
             <p>
                 Green Peppers singles
                 <br />
@@ -591,7 +544,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic6.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/robot peppers.jpg" alt="Mountains" style="width:80%">
             <p>
                 Robot Peppers
                 <br />
@@ -609,7 +562,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic1.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/soup green.jpg" alt="Mountains" style="width:80%">
             <p>
                 Soup Greens PP
                 <br />
@@ -624,7 +577,7 @@
 
     <div class="row">
         <div class="column">
-            <img src="Fruit and veg/pic7.png" alt="Snow" style="width:80%">
+            <img src="Fruit and veg/spinach bunch.jpg" alt="Snow" style="width:80%">
             <p>
                 Spinach bunch
                 <br />
@@ -633,7 +586,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
+            <img src="Fruit and veg/baby spinach.jpg" alt="Forest" style="width:80%">
             <p>
                 Baby Spinach
                 <br />
@@ -642,7 +595,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic6.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/cut spinach.jpg" alt="Mountains" style="width:80%">
             <p>
                 Cut Spinach
                 <br />
@@ -660,7 +613,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic1.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/sweetcorn pp.jpg" alt="Mountains" style="width:80%">
             <p>
                 Sweet Corn PP4
                 <br />
@@ -676,7 +629,7 @@
 
     <div class="row">
         <div class="column">
-            <img src="Fruit and veg/pic7.png" alt="Snow" style="width:80%">
+            <img src="Fruit and veg/tomato box.jpg" alt="Snow" style="width:80%">
             <p>
                 Tomato box
                 <br />
@@ -712,7 +665,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic1.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/tomato romanita.jpg" alt="Mountains" style="width:80%">
             <p>
                 Cherry tomato
                 <br />
