updated fruit page

--- a/FruitPrice.html
+++ b/FruitPrice.html
@@ -97,7 +97,7 @@
   <br />
   <br />
 
-   <!--This is my Fruit images with price-->
+    <!--This is my Fruit images with price-->
     <!--first row-->
 
     <div class="row">
@@ -235,7 +235,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic1.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/kiwi pp.jpg" alt="Mountains" style="width:80%">
             <p>
                 Kiwi pnut
                 <br />
@@ -405,7 +405,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
+            <img src="Fruit and veg/strawberry 250g.jpg" alt="Forest" style="width:80%">
             <p>
                 Strawberry 250g
                 <br />
@@ -424,6 +424,7 @@
         
 
     </div>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
