update veg page

--- a/VegPrice.html
+++ b/VegPrice.html
@@ -99,10 +99,7 @@
     </section>
 <br/>
 <br/>
-<!--This is my veg images with price-->
-    <!--first row-->
-
-    <div class="row">
+  <div class="row">
         <div class="column">
             <img src="Fruit and veg/beetroot 1kg.jpg" alt="Snow" style="width:80%">
             <p>
@@ -113,7 +110,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
+            <img src="Fruit and veg/brinjal 3 for.jpg" alt="Forest" style="width:80%">
             <p>
                 Brinjals 3 for
                 <br />
@@ -155,7 +152,7 @@
 
     <div class="row">
         <div class="column">
-            <img src="Fruit and veg/pic7.png" alt="Snow" style="width:80%">
+            <img src="Fruit and veg/greenbean 1kg.jpg" alt="Snow" style="width:80%">
             <p>
                 Green Beans PP 350g
                 <br />
@@ -208,7 +205,7 @@
 
     <div class="row">
         <div class="column">
-            <img src="Fruit and veg/pic7.png" alt="Snow" style="width:80%">
+            <img src="Fruit and veg/caulibroccli.jpg" alt="Snow" style="width:80%">
             <p>
                 CauliBrocc PP
                 <br />
@@ -236,7 +233,7 @@
 
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic4.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/chilies 1kg.jpg" alt="Mountains" style="width:80%">
             <p>
                 Green Chillies
                 <br />
@@ -274,7 +271,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
+            <img src="Fruit and veg/dhudi 1kg.jpg" alt="Forest" style="width:80%">
             <p>
                 Dudhi
                 <br />
@@ -335,7 +332,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/mushroom.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/mushroom combo.jpg" alt="Mountains" style="width:80%">
             <p>
                 Mushroom 250g punnet
                 <br />
@@ -422,7 +419,7 @@
 
     <div class="row">
         <div class="column">
-            <img src="Fruit and veg/pic7.png" alt="Snow" style="width:80%">
+            <img src="Fruit and veg/cape onion 7kg.jpg" alt="Snow" style="width:80%">
             <p>
                 Cape onion 7kg med.
                 <br />
@@ -431,7 +428,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
+            <img src="Fruit and veg/red onion 1kg.jpg" alt="Forest" style="width:80%">
             <p>
                 Red Onions 1kg
                 <br />
@@ -440,7 +437,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic6.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/potato 10kg utd.jpg" alt="Mountains" style="width:80%">
             <p>
                 Potatoes 10kg UTD
                 <br />
@@ -605,7 +602,7 @@
 
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic4.jpg" alt="Mountains" style="width:80%">
+            <img src="Fruit and veg/springonion.jpg" alt="Mountains" style="width:80%">
             <p>
                 Spring Onions
                 <br />
@@ -638,7 +635,7 @@
             </p>
         </div>
         <div class="column">
-            <img src="Fruit and veg/pic8.jpg" alt="Forest" style="width:80%">
+            <img src="Fruit and veg/tomato 1kg.jpg" alt="Forest" style="width:80%">
             <p>
                 Tomatoes 1kg Bag
                 <br />
@@ -675,7 +672,8 @@
         </div>
 
     </div>
-
+    
+    
     <hr />
     <h1 class="heading">Garlic </h1>
     <br />
